affichage des personnages + page viewChar + divers modif

--- a/viewchar.html
+++ b/viewchar.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/character-manager.e31bb0bc.js"></script>
+    <h1>View Character</h1>
+    <div id="single">
+        
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
