modal for deleting

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
         </div>
     </template>
     <div id="single"></div>
+    <div id="modal">
+        <p>Êtes-vous sûr(e) de vouloir supprimer l'élément:</p>
+        <span class="idChar"></span>
+        <button type="button">Supprimer</button>
+        <button type="button">Annuler</button>
+    </div>
     <script src="index.js"></script>
 </body>
 
