--- a/index.html
+++ b/index.html
@@ -56,7 +56,26 @@
         <p>Êtes-vous sûr(e) de vouloir supprimer l'élément:</p>
         <span class="idChar"></span>
         <button type="button">Supprimer</button>
-        <button type="button">Annuler</button>
+        <button id="close-modal" type="button">Annuler</button>
+    </div>
+    <div id="form-new-char">
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="form-name"></div>
+            <div class="form-group">
+                <label for="short-description">Short description</label>
+                <input type="text"
+                    id="form-short-description"></div>
+            <div class="form-group">
+                <label for="description">Description</label>
+                <textarea type="text" id="form-description"
+                    placeholder="You can use **Markdown**"></textarea></div>
+            <div class="form-group">
+                <label for="image"></label>
+                <input type="file" id="form-image"></div>
+            <button type="button" id="new-char">Envoyer</button>
+        </form>
     </div>
     <script src="index.js"></script>
 </body>
