--- a/index.html
+++ b/index.html
@@ -53,27 +53,32 @@
     </template>
     <div id="single"></div>
     <div id="modal">
-        <p>Êtes-vous sûr(e) de vouloir supprimer l'élément:</p>
-        <span class="idChar"></span>
-        <button type="button">Supprimer</button>
-        <button id="close-modal" type="button">Annuler</button>
+        <div id="modal-box">
+            <p>Êtes-vous sûr(e) de vouloir supprimer l'élément:</p>
+            <span class="idChar"></span>
+            <button id="del-char" type="button">Supprimer</button>
+            <button id="close-modal" type="button">Annuler</button>
+        </div>
     </div>
     <div id="form-new-char">
         <form>
             <div class="form-group">
                 <label for="name">Name</label>
-                <input type="text" id="form-name"></div>
+                <input type="text" id="form-name">
+            </div>
             <div class="form-group">
                 <label for="short-description">Short description</label>
-                <input type="text"
-                    id="form-short-description"></div>
+                <input type="text" id="form-short-description">
+            </div>
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea type="text" id="form-description"
-                    placeholder="You can use **Markdown**"></textarea></div>
+                <textarea type="text" id="form-description" placeholder="You can use **Markdown**"></textarea>
+            </div>
             <div class="form-group">
                 <label for="image"></label>
-                <input type="file" id="form-image"></div>
+                <input type="file" id="form-image">
+            </div>
+            <input id="form-char-id" type="hidden" value="">
             <button type="button" id="new-char">Envoyer</button>
         </form>
     </div>
